--- a/2º_Curso/desenvolvemento_interfaces/evaluacion_1/Tema4/ejercicio_examen/ejercicio_examen/ejercicio_examen.csproj
+++ b/2º_Curso/desenvolvemento_interfaces/evaluacion_1/Tema4/ejercicio_examen/ejercicio_examen/ejercicio_examen.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7FB001F3-4DEB-45EA-BF67-2D085160E582}</ProjectGuid>
+    <ProjectGuid>{C5F9AF11-E5B0-4C40-9F2C-263349FF1668}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ejercicio4</RootNamespace>
-    <AssemblyName>ejercicio4</AssemblyName>
+    <RootNamespace>ejercicio_examen</RootNamespace>
+    <AssemblyName>ejercicio_examen</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,19 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="la_odisea.txt" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FrmDatos.cs" />
+    <Compile Include="FrmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmPrincipal.Designer.cs">
+      <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="lib\Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Content Include="100_años_de_soledad.txt" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Record.cs" />
+    <EmbeddedResource Include="FrmPrincipal.resx">
+      <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,9 +81,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="frankenstein.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
