--- a/2º_Curso/acceso_a_datos/evaluacion_2/tema_5/tema5/pom.xml
+++ b/2º_Curso/acceso_a_datos/evaluacion_2/tema_5/tema5/pom.xml
@@ -84,6 +84,13 @@
       <artifactId>jaxb-runtime</artifactId>
       <version>3.0.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>3.3.2</version>
+    </dependency>
+
     <!-- the REST API  https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
     <!--<dependency> -->
     <!--<groupId>javax.ws.rs</groupId> -->
