--- a/2º_Curso/sistemas_xestion_empresarial/evaluacion_2/libreria/composer.json
+++ b/2º_Curso/sistemas_xestion_empresarial/evaluacion_2/libreria/composer.json
@@ -12,6 +12,8 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "ibex/crud-generator": "^2.1",
+        "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
