--- a/2º_Curso/desenvolvemento_interfaces/evaluacion_2/tema_5/ejercicio2/formulario/formulario.csproj
+++ b/2º_Curso/desenvolvemento_interfaces/evaluacion_2/tema_5/ejercicio2/formulario/formulario.csproj
@@ -90,5 +90,8 @@
   <ItemGroup>
     <None Include="Resources\images.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img28.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
